--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -15,4 +15,24 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+.btn-start {
+  position: absolute;
+  left: 40%;
+  bottom: 50%;
+  width: 100px;
+  height: 100px;
+  font-size: 26px;
+  color: #bb2782;
+  border-radius: 25%;
+}
+.btn-stop {
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  width: 100px;
+  height: 100px;
+  font-size: 26px;
+  color: #274abd;
+  border-radius: 25%;
 }
