--- a/src/css/common.css
+++ b/src/css/common.css
@@ -36,3 +36,31 @@ img {
   color: #274abd;
   border-radius: 25%;
 }
+
+.timer {
+  display: flex;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  margin-left: 10px;
+  text-transform: uppercase;
+}
+.value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 36px;
+  text-align: center;
+  margin-left: 10px;
+}
